2005-05-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptoolbox-dnd.c: implemented dropping of pixbufs.
	Bail out early from all callbacks if gimp->busy is TRUE.

2005-05-25  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c: added --store option which tries to
	store a file in the clipboard manager, improved error reporting.

2005-05-24  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorselect.c: only set a horizontal size
	request on the vertical color bar.

2005-05-24  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig.c (gimp_color_config_set_property):
	plugged a small memleak.

2005-05-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig.c: initialize GimpRGB and GFigContext structs
	before using them.

2005-05-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c (select_window_x11): also grab the
	keyboard and allow to cancel the operation using the Escape key.

2005-05-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: always apply the selected delay.

2005-05-23  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcellrendererdashes.[ch]: we don't actually need to
	keep a pointer to the dashes array.
	(gimp_cell_renderer_dashes_render): respect horizontal padding.

	* app/widgets/gimpstrokeeditor.c: added 2 pixels horizontal
	padding for the dashes cell-renderer.

2005-05-23  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/helpbrowser/Makefile.am: added the missing -mwindows
	for OS_WIN32

2005-05-23  Tor Lillqvist  <tml@novell.com>

	* gimptool-win32.c.in (get_prefix): Don't crash if gimp.exe isn't
	found in PATH either.

2005-05-22  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/Makefile.am: changed gimpwidgetsenums.c rule to
	include the bits for "desc" and "help" support.

	* libgimpwidgets/gimpwidgetsenums.h: added "desc" and "help"
	strings for the GimpColorSelectorChannel enum.
